# libsession-util-nodejs

./: .gitattributes  .gitignore  .gitmodules  .prettierrc  .yarnrc.yml  BUILDING.md  CMakeLists.txt  README.md  Readme.md  after_update_bin.sh  base_config.cpp  base_config.hpp  binding.gyp  build_release_archive.py  groups.d.ts  index.d.ts  index.js  package.json  pnpm-lock.yaml  session_util.cc  session_util.cpp  session_util_wrapper.d.ts  shared.d.ts  user_config.cc  user_config.cpp  user_config.h  user_config.hpp  utilities.cpp  utilities.hpp
.github/workflows/: pull-request.yml  test.yml
groups/: groupmembers.d.ts  index.d.ts
include/oxenc/: bt_serialize.h  version.h
include/session/config/: base.hpp  contacts.h  contacts.hpp  user_groups.h  user_groups.hpp
lib/win/amd64/: session-util.lib
src/: addon.cpp  base_config.cpp  base_config.hpp  community.hpp  config_sig.hpp  constants.cpp  constants.hpp  contacts_config.cpp  contacts_config.hpp  convo_info_volatile_config.cpp  convo_info_volatile_config.hpp  group_info_config.cpp  group_info_config.hpp  profile_pic.cpp  profile_pic.hpp  user_config.cpp  user_config.hpp  user_groups_config.cpp  user_groups_config.hpp  utilities.cpp  utilities.hpp
src/blinding/: blinding.hpp
src/groups/: group_info_config.cpp  group_info_config.hpp  group_keys_config.cpp  group_keys_config.hpp  group_members_config.cpp  group_members_config.hpp  meta_group.cpp  meta_group.hpp  meta_group_wrapper.cpp  meta_group_wrapper.hpp
src/meta/: meta_base.cpp  meta_base.hpp  meta_base_wrapper.cpp  meta_base_wrapper.hpp
src/multi_encrypt/: multi_encrypt.hpp
types/: index.d.ts  shared.d.ts
types/blinding/: blinding.d.ts  index.d.ts
types/groups/: groupinfo.d.ts  groupkeys.d.ts  groupmembers.d.ts  index.d.ts  metagroup.d.ts
types/multi_encrypt/: index.d.ts  multi_encrypt.d.ts
types/user/: contacts.d.ts  convovolatile.d.ts  userconfig.d.ts  usergroups.d.ts
user/: contacts.d.ts  convovolatile.d.ts  index.d.ts  userconfig.d.ts  usergroups.d.ts
